Bug 1389862: Change NS_STYLE_CONTENT macro definitions to scoped enum class StyleContent; r=manishearth

MozReview-Commit-ID: 4ojiXrCNRIN